fixed nav bar spacing

--- a/views/styles.css
+++ b/views/styles.css
@@ -8,8 +8,19 @@ body {
 	background-image:url("./EventBored_Background.PNG");
 }
 
+li a {
+    display: block;
+    color: #000;
+    text-decoration: none;
+}
+
+/* Change the link color on hover */
+li a:hover {
+    background-color: #555;
+    color: white;
+}
+
 li {
-	list-style-type: square;
 	font-size:  18px;
 }
 
@@ -18,7 +29,11 @@ a {
 }
 .nav_bar {
 	background-color: white;
-	font-size: 22px;
+	font-size: 22px; 
+	list-style-type: none;
+    margin: 0;
+    padding: 0;
+    width: 200px;
 }
 
  .container {
